--- a/resources/views/includes/stylesheets.css
+++ b/resources/views/includes/stylesheets.css
@@ -1,8 +1,18 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <style>
-h1,h2 {
+h1{
   text-align: center;
+}
+h2{
+  text-align: center;
+  text-decoration:underline;
+}
+
+h3{
+  text-align: center;
+  font-style:italic;
+  font-size: 20;
 }
 
 p{
